--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -18,33 +18,42 @@
             <div class="col-md-12 ">
                 <h3 class="fw-bold">Generator</h3>
                 <div class="px-4">
-                <RadzenCard style="font-size:17px; font-weight:500">
-                    <p>Skriv i feltet under for manuell NøkkelID</p>
-                    </RadzenCard>
-                </div>
-                <div class="row">
 
-                    <div class="p-4">
-                        <RadzenCard class="">
-                            <textarea value="@flereids" @onchange="@((args) => flereids = args?.Value?.ToString())" class=" border-1 border rounded-3 shadow-sm w-100 h-100 " rows="8" style="resize:none"   />
-                        </RadzenCard>
-                    </div>
-                    <div class="px-4">
-                        <RadzenCard style="font-size:17px; font-weight:500">
-                   
-                    <p>Vis du vil genere data uten nøkkelID skriv antall i feltet under </p>
-                        </RadzenCard>
-                    </div>
-                    <div class="col-md-12 p-2">
-                        <RadzenTextBox Value="@value" Change="@OnChange" Placeholder="Skriv antall brukere" style="width: 150px" />
-                    </div>
-
-                    <div class="col-md-12 p-2 text-center">
-                        
-                         <RadzenButton Text="Generer" ButtonStyle="ButtonStyle.Success" Click="@SendId" style="width: 50%" />
-                       
-                    </div>
+                    <RadzenAlert Title="Skriv inn NøkkelID manuelt"
+                        AlertStyle="AlertStyle.Info" 
+                        Variant="Variant.Flat" 
+                        Shade="Shade.Lighter">
+                        F.eks: 1,2,3,4 eller 3,8,16,3,1
+                    </RadzenAlert>
                 </div>
+               
+              
+                <div class="p-4">        
+                           <textarea 
+                               value="@flereids" @onchange="@((args) => flereids = args?.Value?.ToString())" 
+                               class=" border-1 border rounded-3 shadow-sm w-100 h-50 "
+                               rows="8" 
+                               style="resize:none" 
+                               placeholder=" F.eks: 1,3,6,20,11"   />    
+                </div>
+
+                <div class="px-4">
+                        <RadzenAlert Title="Skriv inn antall nøkler du ønsker å generere"          
+                            AlertStyle="AlertStyle.Info" 
+                            Variant="Variant.Flat" 
+                            Shade="Shade.Lighter">                   
+                        </RadzenAlert>
+                </div>
+
+
+                <div class="col-md-12 p-2">
+                        <RadzenTextBox Value="@value" Change="@OnChange" Placeholder="Skriv antall brukere" style="width: 200px" />
+                </div>
+
+                <div class="col-md-12 p-2 text-center">                      
+                         <RadzenButton Text="Generer" ButtonStyle="ButtonStyle.Success" Click="@SendId" style="width: 25%" />
+                </div>
+              
             </div>
         </div>
     </RadzenCard>
