Httpfix, Auth, Presisting token change, Program Auth edits. Api accesstoken get og post.

--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -3,6 +3,7 @@
 @inject VismaBlazor.HttpClientPost HttpClientPost
 @inject NavigationManager NavigationManager
 @using CsvHelper
+@using Microsoft.AspNetCore.Authorization
 @using Newtonsoft.Json
 @using Radzen
 @using Radzen.Blazor
@@ -17,6 +18,7 @@
 
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 
 
