--- a/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Components.Authorization
 @using Radzen
 @using Radzen.Blazor
 
@@ -12,12 +13,12 @@
      
     <RadzenSidebar Responsive="false" Style="width: max-content" @bind-Expanded="@sidebarExpanded">
         <RadzenPanelMenu DisplayStyle="@(sidebarExpanded ? MenuItemDisplayStyle.IconAndText : MenuItemDisplayStyle.Icon)" ShowArrow="false">
-              <RadzenPanel Text= " NavnEtternavn@visma.com " Icon=""></RadzenPanel>
+              <RadzenPanel Text=@user Icon=""></RadzenPanel>
 
       
             <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="" />
             <RadzenPanelMenuItem Text="Generator" Icon="create" Path="Generator" />
-            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="Login" />
+            <RadzenPanelMenuItem Text="Logg ut" Icon="logout" Path="/Account/Logout" />
            
         </RadzenPanelMenu>
     </RadzenSidebar>
@@ -36,5 +37,30 @@
 @code {
     bool sidebarExpanded = true;
 
+    private string user = "";
+
+    [CascadingParameter]
+
+    private Task<AuthenticationState>? authenticationState { get; set; }
+    
+
+    protected override async void OnInitialized()
+    {
+        if (authenticationState is not null)
+        {
+            var state = await authenticationState;
+
+            user = state.User.Identity?.Name ?? "";
+
+        }
+
+        await base.OnInitializedAsync();
+
+
+    }
+
+    
+
+    
 
 }
