--- a/VismaBlazor/VismaBlazor/Components/Layout/NavMenu.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Radzen.Blazor
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Visma</a>
     </div>
