--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -2,11 +2,13 @@
 @using Models
 @inject VismaBlazor.HttpClientPost HttpClientPost
 @inject NavigationManager NavigationManager
+@using Microsoft.AspNetCore.Authorization
 @using Radzen.Blazor;
 @using Radzen;
 @using System;
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 
 <PageTitle>Generator</PageTitle>
