--- a/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Resultat"
+@using Microsoft.AspNetCore.Authorization
 @using Models
 @using System.Text.Json
 @using System.Text
@@ -9,6 +10,7 @@
 @inject NavigationManager NavigationManager
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 
 <PageTitle>Resultat</PageTitle>
