--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -16,7 +16,7 @@
     <RadzenCard class="text-center ">
         <div class="row">
             <div class="col-md-12 ">
-                <h3 class="fw-bold">Generator</h3>
+            <h3>Generator</h3>
                 <div class="px-4">
 
                     <RadzenAlert Title="Skriv inn NøkkelID manuelt"
