--- a/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Generator.razor
@@ -22,8 +22,10 @@
                     <RadzenAlert Title="Skriv inn NøkkelID manuelt"
                         AlertStyle="AlertStyle.Info" 
                         Variant="Variant.Flat" 
-                        Shade="Shade.Lighter">
+                        Shade="Shade.Lighter"
+                        AllowClose=false>
                         F.eks: 1,2,3,4 eller 3,8,16,3,1
+
                     </RadzenAlert>
                 </div>
                
@@ -41,8 +43,9 @@
                         <RadzenAlert Title="Skriv inn antall nøkler du ønsker å generere"          
                             AlertStyle="AlertStyle.Info" 
                             Variant="Variant.Flat" 
-                            Shade="Shade.Lighter">                   
-                        </RadzenAlert>
+                            Shade="Shade.Lighter"
+                            AllowClose=false>
+                    </RadzenAlert>
                 </div>
 
 
