--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -34,7 +34,7 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
 
 <RadzenCard class="py-4 flex-column" Style="width: 100%">
     <InputFile OnChange="LoadFiles" />
-    <RadzenButton Text="Upload" Click=@(args => Opplastning(file))  class="d-block pt-2 mt-4" />  
+    <RadzenButton Text="Upload" Click=@(args => Opplastning(file))  class="d-block pt-2 mt-4 bg-success" />  
 </RadzenCard>
 
 
