--- a/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
@@ -8,20 +8,13 @@
         <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" Gap="" >
             <RadzenImage Path="images/Visma_logo.png" Style="width: 15rem" AlternateText="community" />
             
-            
-
-            <RadzenCard>
-                <div class="text-black text-uppercase fw-bold fs-6">
-                @user
-                </div>
-                </RadzenCard>
-
+           
             </RadzenStack>
-        </div>
+       
     </RadzenHeader>
 
     <RadzenPanelMenu> 
-        <RadzenPanel Text=" NavnEtternavn@visma.com"/>
+        <RadzenPanel>@user</RadzenPanel>
         <RadzenPanelMenuItem Text="Hjem" Icon="home" Path="" />
         <RadzenPanelMenuItem Text="Import" Icon="file_upload" Path="Importer" />
         <RadzenPanelMenuItem Text="Generator" Icon="create" Path="Generator" />
