Endringer fra visma til datagenerator

--- a/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
+++ b/VismaBlazor/VismaBlazor/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 <RadzenLayout>
     <RadzenHeader class="bg-white">
         <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" Gap="" >
-            <RadzenImage Path="images/Visma_logo.png" Style="width: 15rem" AlternateText="community" />
+            <RadzenImage Path="images/logo.png" Style="width: 15rem" AlternateText="community" />
             
            
             </RadzenStack>
@@ -32,7 +32,7 @@
 
 </RadzenLayout>
 <RadzenFooter class="rz-text-align-center shadow" >
-    <RadzenText TextStyle="TextStyle.Overline" class="p-2">Visma ┃ Gruppe 5 ┃ @@2024 </RadzenText>
+    <RadzenText TextStyle="TextStyle.Overline" class="p-2">Datagenerator ┃ Gruppe 5 ┃ @@2024 </RadzenText>
 
 </RadzenFooter>
 @code {
