pre presentasjon push

--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -13,11 +13,13 @@
 @using System.Text
 @using Microsoft.AspNetCore.Components.Forms;
 @using Models
+@using Microsoft.AspNetCore.Authorization
 
 @using System.Linq
 
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
+@attribute [Authorize]
 
 
 
