--- a/VismaBlazor/VismaBlazor/Components/Routes.razor
+++ b/VismaBlazor/VismaBlazor/Components/Routes.razor
@@ -1,9 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 
 
-<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
+<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(_Imports).Assembly }">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.Nav)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
 </Router>
