--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -17,9 +17,8 @@
 
 @using System.Linq
 
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@rendermode @(new InteractiveServerRenderMode(prerender: true))
 @attribute [StreamRendering]
-@attribute [Authorize]
 
 
 
@@ -45,7 +44,9 @@
 
 
     @code {
-        private void ImporterPage() { 
+    //@attribute [Authorize]
+
+    private void ImporterPage() { 
             NavigationManager.NavigateTo("Importer");
         }
     private void GeneratorPage()
