--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -58,15 +58,15 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
 @if (BrukerRes != null && BrukerRes.Any())
 {
     <RadzenGrid TItem="BrukerRespons" Data="@BrukerRes"
-                AllowPaging="true" AllowSorting="true" AllowFiltering="true">
+                AllowPaging="true" AllowSorting="true">
         <Columns>
             <RadzenGridColumn TItem="BrukerRespons" Property="Id" Title="ID" Width="80px" Filterable="true" />
-            <RadzenGridColumn TItem="BrukerRespons" Property="Fornavn" Title="Fornavn" Width="100px" />
-            <RadzenGridColumn TItem="BrukerRespons" Property="Etternavn" Title="Etternavn" Width="100px" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Fornavn" Title="Fornavn" Width="100px" Filterable="true" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Etternavn" Title="Etternavn" Width="100px" Filterable="true" />
             <RadzenGridColumn TItem="BrukerRespons" Property="Tlf" Title="Telefon" Width="100px" />
-            <RadzenGridColumn TItem="BrukerRespons" Property="Brukernavn" Title="Brukernavn" Width="120px" />
-            <RadzenGridColumn TItem="BrukerRespons" Property="Passord" Title="Passord" Width="120px" />
-            <RadzenGridColumn TItem="BrukerRespons" Property="Epost" Title="E-post" Width="120px" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Brukernavn" Title="Brukernavn" Width="120px" Filterable="true" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Passord" Title="Passord" Width="120px" Filterable="true" />
+            <RadzenGridColumn TItem="BrukerRespons" Property="Epost" Title="E-post" Width="120px" Filterable="true" />
         </Columns>
     </RadzenGrid>
 
@@ -313,7 +313,7 @@ else
                         await writer.WriteLineAsync("id,fornavn,etternavn,tlf,brukernavn,passord,epost");
                         foreach (var bruker in BrukerRes)
                         {
-                            string linje = $"{bruker.Id},{bruker.Fornavn},{bruker.Etternavn},{bruker.Tlf},{bruker.Brukernavn},{bruker.Passord},{bruker.Epost}";
+                            string linje = $"{bruker.Id},{bruker.Fornavn},{bruker.Mellomnavn},{bruker.Etternavn},{bruker.Tlf},{bruker.Brukernavn},{bruker.Passord},{bruker.Epost}";
                             await writer.WriteLineAsync(linje);
                         }
 
@@ -333,7 +333,7 @@ else
                         foreach (var ansatt in BrukerRes)
                         {
 
-                            string linje = $"{ansatt.Id},{ansatt.Fornavn},{ansatt.Etternavn},{ansatt.Tlf},{ansatt.Brukernavn},{ansatt.Passord},{ansatt.Epost}";
+                            string linje = $"{ansatt.Id},{ansatt.Fornavn},{ansatt.Mellomnavn},{ansatt.Etternavn},{ansatt.Tlf},{ansatt.Brukernavn},{ansatt.Passord},{ansatt.Epost}";
                             await writer.WriteLineAsync(linje);
                         }
                     }
